--- a/src/index.html
+++ b/src/index.html
@@ -1,270 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Tlapnet.dev</title>
+		<title>Beetfit PDF</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 		<link href="./assets/css/styles.css" rel="stylesheet" />
-		<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
+		<style>@page { size: A4 }</style>
 	</head>
-	<body>
-		<include src="./src/partials/header.html"></include>
-
-		<div class="bg-gradient-r-blue-600-blue-500 pt-20 md:pt-32 px-4 md:px-8 z-10 relative" id="mainHeader">
-			<div class="container mx-auto">
-				<div class="flex flex-wrap w-full items-center">
-					<div class="max-w-md mx-auto text-center md:max-w-none md:text-left md:w-1/2 md:pr-10 lg:pr-16 xl:pr-32">
-						<h1 class="text-2xl md:text-4xl xl:text-5xl font-bold text-white leading-tight mb-4">Proč by měl chtít dělat pro ISP</h1>
-						<p class="text-blue-200 xl:text-lg mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porta, odio a commodo dictum, felis urna aliquet metus, varius luctus metus lorem ut risus.</p>
-						<div class="mb-4">
-							<include src="./src/components/button.html" locals='{"text": "Napište nám"}'></include>
-						</div>
-					</div>
-					<div class="w-3/4 sm:w-2/3 mx-auto pt-10 mb-8 md:-mb-10 xl:-mb-16 md:pt-0 md:w-1/2">
-						<div class="w-full relative" style="padding-top: 100%">
-							<img
-								src="assets/tlapka-pest.png"
-									srcset="
-									assets/tlapka-pest.png 1x,
-									assets/tlapka-pest@2x.png 2x,
-									assets/tlapka-pest@2x.png 3x
-								"
-									alt="Tlapnet"
-									class="w-full absolute top-1/2 transform -translate-y-1/2"
-							>
-						</div>
-					</div>
+	<body class="A4 text-xs">
+		<section class="sheet flex flex-col">
+			<include src="./src/partials/header.html"></include>
+			<div class="flex">
+				<div class="pl-6 w-7/12">
+					<module
+						href="./src/components/panel.html"
+						locals='{
+								"header": "Snídaně",
+								"color": "blue",
+								"icon": "laptop",
+								"iconColor": "2c5282"
+							}'
+					>
+						<div>test </div>
+						<div>test </div>
+					</module>
+					<module
+							href="./src/components/panel.html"
+							locals='{
+								"header": "Přesnídávka",
+								"color": "gray",
+								"icon": "laptop",
+								"iconColor": "2c5282"
+							}'
+					>
+						<div>test </div>
+						<div>test </div>
+						<div>test </div>
+						<div>test </div>
+						<div>test </div>
+					</module>
+					<module
+							href="./src/components/panel.html"
+							locals='{
+								"header": "Oběd",
+								"color": "purple",
+								"icon": "laptop",
+								"iconColor": "2c5282"
+							}'
+					>
+						<div>test </div>
+						<div>test </div>
+					</module>
+					<module
+							href="./src/components/panel.html"
+							locals='{
+								"header": "Aktivity",
+								"color": "green",
+								"icon": "laptop",
+								"iconColor": "2c5282"
+							}'
+					>
+						<div>test </div>
+						<div>test </div>
+					</module>
 				</div>
 			</div>
-		</div>
-
-		<include
-			src="./src/components/skew-header.html"
-			locals='{
-				"text": "Co děláme?",
-				"background": "bg-white",
-				"textBackground": "bg-gradient-r-blue-600-blue-500",
-				"textColor": "text-white",
-				"icon": "laptop",
-				"iconColor": "ffffff",
-				"headerId": "what"
-			}'>
-		</include>
-
-		<div class="px-4 md:px-8 bg-white overflow-hidden">
-			<div class="container mx-auto lg:px-8 xl:px-12">
-				<div class="flex flex-col flex-wrap md:flex-row md:space-x-12 xl:space-x-24 pb-6 xl:pb-12 relative">
-					<svg fill="currentColor" viewBox="0 0 100 100" class="text-gray-200 w-32 absolute z-0 transform -translate-x-8 translate-y-4 md:w-64 md:-translate-x-16 xl:w-72 xl:-translate-x-24">
-						<svg enable-background="new 0 0 100 100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-							<path d="m81.9 52.5c17 .4 19.4-36.5 4.6-37.2-19.8-1-13.3 37-4.6 37.2"/>
-							<path d="m41.9 8.3c-.9 12.5 7.5 24.7 13.2 26.3 3.4 1 5.8-.6 7-2.8 4.3-7.9 3.2-32.5-11.9-31.8-4.9.2-8.1 4.8-8.3 8.3"/>
-							<path d="m15.1 32.1c3.4 3.5 12.2 12 18.4 11.4 2.4-.3 5.3-1.9 5.6-5 .6-7.2-6.5-30.7-21.9-25.1-5.9 2.1-9.7 10.8-2.1 18.7"/>
-							<path d="m5.8 50.8c-1.9 2.5-6.6 13.1 10.4 21.4 10.8 5.3 19.3-6.5 8.9-17.8-8.1-8.8-16.5-7.2-19.3-3.6"/>
-							<path d="m56.5 96.1c3.2-2.6 21.2-13.1 23.9-14.1 4.4-1.7 8.4-3.9 9.7-7.7 3.7-10.9-10.4-10.8-16.9-17.3-3.6-3-7.1-6.2-10.3-9.6-5.3-5.6-15.7-5.9-20.6 1.9-4.1 6.5-4.7 13.9-4.7 23.7 0 4.3-4.1 8-5 11.5-5.4 19.9 17.4 16.8 23.9 11.6"/>
-						</svg>
-					</svg>
-					<div class="flex-1 pt-4 md:pt-8 xl:pt-12 z-10">
-						<h3 class="text-blue-700 font-semibold text-lg md:text-xl mb-1 md:mb-3">Software pro poskytovatele internetu (ISP)</h3>
-						<p class="text-sm lg:text-base">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui nibh, facilisis non dapibus ut,
-							sagittis in sapien. Sed ante arcu, consectetur nec auctor vitae, vestibulum nec dui. Aenean nec
-							scelerisque arcu. Nullam sed mi vestibulum, pharetra dolor non, sollicitudin nisl.
-						</p>
-					</div>
-					<div class="flex-1 pt-4 md:pt-8 xl:pt-12 z-10">
-						<h3 class="text-blue-700 font-semibold text-lg md:text-xl mb-1 md:mb-3">Software pro management sítí a zákazníků</h3>
-						<p class="text-sm lg:text-base">
-							Vivamus at nisi volutpat, sagittis velit vel, porta urna. Mauris nec metus vitae mi elementum condimentum
-							quis et neque. Fusce sit amet nibh nibh. Praesent porttitor faucibus urna, quis rutrum purus ullamcorper ut.
-							Duis mattis nulla ut orci blandit efficitur. Aliquam eleifend nisl in lectus tempor.
-						</p>
-					</div>
-					<div class="flex-1 pt-4 md:pt-8 xl:pt-12 z-10">
-						<h3 class="text-blue-700 font-semibold text-lg md:text-xl mb-1 md:mb-3">Software pro řízení firemních procesů</h3>
-						<p class="text-sm lg:text-base">
-							Sed lectus mi, malesuada sed consectetur sed, ornare ut est. Nam quis felis diam. Proin sit amet consectetur arcu.
-							Nulla vestibulum ex a interdum elementum. Nunc rhoncus nisl id ex posuere placerat.
-							Pellentesque aliquam lectus risus. Etiam quis enim eu tellus lacinia interdum.
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="container mx-auto lg:px-8 xl:px-12">
-				<div class="max-w-4xl mx-auto">
-					<div class="bg-gray-900 rounded py-4 mb-8 md:mt-16 md:mb-20 smt-14 md:smt-20 xl:smt-32" id="how">
-						<div class="flex items-center">
-							<div class="hidden md:block md:w-2/5">
-								<div class="w-full">
-									<div class="w-full relative" style="padding-top: 75%">
-										<img
-												src="assets/tlapka-stack.png"
-												srcset="
-										assets/tlapka-stack.png 1x,
-										assets/tlapka-stack@2x.png 2x,
-										assets/tlapka-stack@2x.png 3x
-									"
-												alt="Tlapnet"
-												class="w-full absolute top-1/2 transform -translate-y-1/2"
-										>
-									</div>
-								</div>
-							</div>
-							<div class="flex-grow min-w-0">
-								<div class="flex w-full text-yellow-300 font-semibold items-center text-lg xl:text-2xl uppercase px-4 sm:px-8 mb-2 xl:mb-4">
-									<img src="https://obr.now.sh/fa/s/code/64/faf089" loading="lazy" class="w-8 h-8 mr-2">
-									V čem děláme?
-								</div>
-<pre class="text-white overflow-x-auto px-4 sm:px-8">
-"require": {
-	"php": <span class="text-yellow-300">">= 7.2",</span>
-	"nette": <span class="text-yellow-300">"✓",</span>
-	"symfony": <span class="text-yellow-300">"✓",</span>
-	"contribute": <span class="text-yellow-300">"✓",</span>
-	"vuejs": <span class="text-yellow-300">"✓",</span>
-	"tailwindcss": <span class="text-yellow-300">"✓",</span>
-	"docker": <span class="text-yellow-300">"✓",</span>
-}
-</pre>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="container mx-auto lg:px-8 xl:px-12 smt-14 md:smt-20" id="dont">
-				<div class="flex w-full justify-end mb-8 md:mb-16">
-					<div class="w-full max-w-4xl mx-auto md:px-8">
-						<div class="flex items-center justify-center mb-4">
-							<img src="https://obr.now.sh/fa/r/times-circle/64/DD6B20" class="w-8 h-8 mr-2">
-							<h2 class="text-orange-600 font-semibold uppercase text-lg xl:text-2xl">Co neděláme?</h2>
-						</div>
-						<p class="mb-4 text-center">Wordpress, Drupal, Joomla, zákaznické weby nebo eshopy.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<include
-			src="./src/components/skew-header.html"
-			locals='{
-				"text": "Kde děláme?",
-				"background": "bg-gray-200",
-				"textBackground": "bg-white",
-				"textColor": "text-gray-800",
-				"icon": "map-marked-alt",
-				"iconColor": "2d3748",
-				"headerId": "where"
-			}'>
-		</include>
-
-		<div class="px-4 md:px-8 overflow-hidden">
-			<div class="container mx-auto lg:px-8 xl:px-12 relative z-10">
-				<div class="flex flex-col flex-wrap md:flex-row md:space-x-12 xl:space-x-24 pb-6 pt-2 xl:pb-12">
-					<div class="flex-1 pt-4 md:pt-8 xl:pt-12">
-						<div class="flex">
-							<img src="https://obr.now.sh/fa/s/home/64/cbd5e0" class="flex-shrink-0 w-10 h-10 md:w-16 md:w-16 lg:w-20 lg:h-20" />
-							<div class="flex-1 pl-2 lg:pl-8">
-								<h3 class="font-semibold text-lg md:text-xl mb-1 md:mb-3">Doma a kdekoliv na světě</h3>
-								<p class="text-sm lg:text-base">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui nibh, facilisis non dapibus ut,
-									sagittis in sapien. Sed ante arcu, consectetur nec auctor vitae, vestibulum nec dui. Aenean nec
-									scelerisque arcu. Nullam sed mi vestibulum, pharetra dolor non, sollicitudin nisl.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="flex-1 pt-4 md:pt-8 xl:pt-12">
-						<div class="flex">
-							<img src="https://obr.now.sh/fa/r/building/64/cbd5e0" class="flex-shrink-0 w-10 h-10 md:w-16 md:w-16 lg:w-20 lg:h-20" />
-							<div class="flex-1 pl-2 lg:pl-8">
-								<h3 class="font-semibold text-lg md:text-xl mb-1 md:mb-3">Kanceláře Praha, Žatec, Hradec Králové</h3>
-								<p class="text-sm lg:text-base">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui nibh, facilisis non dapibus ut,
-									sagittis in sapien. Sed ante arcu, consectetur nec auctor vitae, vestibulum nec dui. Aenean nec
-									scelerisque arcu. Nullam sed mi vestibulum, pharetra dolor non, sollicitudin nisl.
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="container mx-auto lg:px-8 xl:px-12 relative z-0">
-				<svg fill="currentColor" viewBox="0 0 100 100" class="text-gray-300 right-0 w-32 absolute z-0 transform rotate-45 translate-x-16 -translate-y-24 md:-translate-y-56 md:w-64 md:translate-x-24 xl:w-72 xl:translate-x-32">
-					<svg enable-background="new 0 0 100 100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-						<path d="m81.9 52.5c17 .4 19.4-36.5 4.6-37.2-19.8-1-13.3 37-4.6 37.2"/>
-						<path d="m41.9 8.3c-.9 12.5 7.5 24.7 13.2 26.3 3.4 1 5.8-.6 7-2.8 4.3-7.9 3.2-32.5-11.9-31.8-4.9.2-8.1 4.8-8.3 8.3"/>
-						<path d="m15.1 32.1c3.4 3.5 12.2 12 18.4 11.4 2.4-.3 5.3-1.9 5.6-5 .6-7.2-6.5-30.7-21.9-25.1-5.9 2.1-9.7 10.8-2.1 18.7"/>
-						<path d="m5.8 50.8c-1.9 2.5-6.6 13.1 10.4 21.4 10.8 5.3 19.3-6.5 8.9-17.8-8.1-8.8-16.5-7.2-19.3-3.6"/>
-						<path d="m56.5 96.1c3.2-2.6 21.2-13.1 23.9-14.1 4.4-1.7 8.4-3.9 9.7-7.7 3.7-10.9-10.4-10.8-16.9-17.3-3.6-3-7.1-6.2-10.3-9.6-5.3-5.6-15.7-5.9-20.6 1.9-4.1 6.5-4.7 13.9-4.7 23.7 0 4.3-4.1 8-5 11.5-5.4 19.9 17.4 16.8 23.9 11.6"/>
-					</svg>
-				</svg>
-				<div class="bg-white relative z-10 shadow-lg rounded p-6 md:p-8 xl:p-16 mb-6 xl:mb-12 smt-14 md:smt-20" id="contact">
-					<div class="flex w-full flex-wrap">
-						<div class="w-full lg:w-1/3 xl:w-1/3">
-							<h2 class="flex-shrink-0 font-semibold text-blue-600 text-lg md:text-xl xl:text-3xl uppercase mb-4 leading-10">Chcete pracovat s námi?</h2>
-							<p class="mb-4 text-sm lg:text-base">Praesent porttitor faucibus urna, quis rutrum purus ullamcorper ut. Duis mattis nulla ut orci blandit efficitur. Aliquam eleifend nisl in lectus tempor.</p>
-						</div>
-						<div class="w-full lg:w-2/3 xl:w-2/3 lg:pl-8 space-y-4 md:space-y-8">
-							<div class="flex items-center flex-wrap">
-								<div class="w-full sm:w-1/3 lg:text-right pr-4">
-									<label for="name" class="font-semibold">Jméno:</label>
-								</div>
-								<div class="w-full sm:w-2/3">
-									<input type="text" class="form-input min-w-0 w-full">
-								</div>
-							</div>
-							<div class="flex items-center flex-wrap">
-								<div class="w-full sm:w-1/3 lg:text-right pr-4">
-									<label for="name" class="font-semibold">E-mail:</label>
-								</div>
-								<div class="w-full sm:w-2/3">
-									<input type="email" value="@" class="form-input min-w-0 w-full">
-								</div>
-							</div>
-							<div class="flex items-center flex-wrap">
-								<div class="w-full sm:w-1/3 lg:text-right pr-4">
-									<label for="name" class="font-semibold">Telefon:</label>
-								</div>
-								<div class="w-full sm:w-2/3">
-									<input type="email" class="form-input min-w-0 w-full">
-								</div>
-							</div>
-							<div class="flex items-center flex-wrap">
-								<div class="w-full sm:w-1/3 lg:text-right pr-4">
-									<label for="name" class="font-semibold">CV:</label>
-								</div>
-								<div class="w-full sm:w-2/3">
-									<div x-data="{ fileName: ''}" class="form-input p-0 flex relative">
-										<div class="relative flex-1 cursor-pointer">
-											<span class="px-4 py-2 block text-gray-400 cursor-pointer">Přiložit soubor</span>
-											<p class="absolute top-0 w-full h-full truncate px-4 py-2" :class="{'bg-white' : fileName}" x-text="fileName"></p>
-										</div>
-										<div class="flex-shrink-0 px-4 py-2 border-l font-semibold text-blue-600 cursor-pointer">
-											Vybrat...
-										</div>
-										<input type="file" x-ref="file" class="min-w-0 w-full h-full opacity-0 absolute cursor-pointer" @change="fileName = $refs.file.files[0].name">
-									</div>
-								</div>
-							</div>
-							<div class="flex items-center flex-wrap">
-								<div class="w-full sm:w-1/3 lg:text-right pr-4 self-start lg:pt-2">
-									<label for="name" class="font-semibold">Zpráva:</label>
-								</div>
-								<div class="w-full sm:w-2/3 flex">
-									<textarea rows="5" class="form-textarea min-w-0 w-full"></textarea>
-								</div>
-							</div>
-							<div class="flex items-center justify-end flex-wrap">
-								<include src="./src/components/button.html" locals='{"text": "Odeslat"}'></include>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<include src="./src/partials/footer.html"></include>
-
+			<include src="./src/partials/footer.html"></include>
+		</section>
 		<script> </script>
 	</body>
 </html>
