--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 		<title>Beetfit PDF</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
 		<link href="./assets/css/styles.css" rel="stylesheet" />
 		<style>@page { size: A4 }</style>
 	</head>
-	<body class="A4 text-xs">
+	<body class="A4 font-medium text-xs">
 		<section class="sheet flex flex-col text-gray-700">
 			<module
 					href="/components/header.html"
