--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 								"kcal": "362 kcal",
 								"color": "blue",
 								"panelStyle": "",
-								"icon": "fa/s/laptop",
+								"icon": "fa/s/utensils",
 								"panelStyle": "",
 								"iconColor": "2B6CB0"
 							}'
@@ -44,7 +44,7 @@
 								"kcal": "362 kcal",
 								"color": "gray",
 								"panelStyle": "",
-								"icon": "fa/s/laptop",
+								"icon": "fa/s/carrot",
 								"iconColor": "718096"
 							}'
 					>
@@ -61,7 +61,7 @@
 								"kcal": "362 kcal",
 								"color": "violet",
 								"panelStyle": "",
-								"icon": "fa/s/laptop",
+								"icon": "fa/s/drumstick-bite",
 								"iconColor": "88395F"
 							}'
 					>
@@ -82,7 +82,7 @@
 								"kcal": "164 kcal",
 								"color": "gray",
 								"panelStyle": "",
-								"icon": "fa/s/laptop",
+								"icon": "fa/s/apple-alt",
 								"iconColor": "718096"
 							}'
 					>
@@ -99,7 +99,7 @@
 								"kcal": "518 kcal",
 								"color": "teal",
 								"panelStyle": "",
-								"icon": "fa/s/laptop",
+								"icon": "fa/s/fish",
 								"iconColor": "319795"
 							}'
 					>
