added footer optional text, added labels to diary

--- a/src/index.html
+++ b/src/index.html
@@ -1280,6 +1280,66 @@
 			</div>
 			<module href="/components/footer.html"></module>
 		</section>
+		<section class="sheet flex flex-col text-gray-700">
+			<module
+					href="/components/header.html"
+					locals='{
+						"title": "Záznamy klienta",
+						"subtitle": ""
+					}'
+			></module>
+			<div class="flex w-full px-6">
+				<module
+						href="/components/panel.html"
+						locals='{
+								"header": "Záznam",
+								"headerColor": "violet",
+								"kcal": "",
+								"color": "gray",
+								"panelStyle": "hollow",
+								"icon": "",
+								"iconColor": ""
+							}'
+				>
+					<div class="w-full flex items-center mb-1">
+						<h3 class="font-bold">28. 5. 2020</h3>
+						<span class="bg-gray-200 rounded-full px-2 inline-block leading-4 ml-2 text-3xs text-gray-600 font-bold">2 500 Kč</span>
+					</div>
+					<div class="mb-4">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet consectetur aliquam. Etiam sed metus at metus elementum aliquet.
+						Phasellus auctor urna in ultricies vehicula.
+						<div class="w-full space-x-2 mt-2 flex">
+							<span class="bg-gray-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Zranění</span>
+							<span class="bg-red-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Doporučení</span>
+							<span class="bg-green-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Konzultace</span>
+						</div>
+					</div>
+					<div class="w-full flex items-center mb-1">
+						<h3 class="font-bold">28. 5. 2020</h3>
+					</div>
+					<div class="mb-4">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet consectetur aliquam. Etiam sed metus at metus elementum aliquet.
+						Phasellus auctor urna in ultricies vehicula.
+						<div class="w-full space-x-2 mt-2 flex">
+							<span class="bg-red-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Doporučení</span>
+							<span class="bg-green-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Konzultace</span>
+						</div>
+					</div>
+					<div class="w-full flex items-center mb-1">
+						<h3 class="font-bold">28. 5. 2020</h3>
+					</div>
+					<div>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet consectetur aliquam. Etiam sed metus at metus elementum aliquet.
+						Phasellus auctor urna in ultricies vehicula.
+						<div class="w-full space-x-2 mt-2 flex">
+							<span class="bg-gray-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Zranění</span>
+							<span class="bg-green-800 rounded px-2 flex leading-4 text-3xs text-white font-bold">Konzultace</span>
+						</div>
+					</div>
+				</module>
+			</div>
+			<module href="/components/footer.html"></module>
+		</section>
 		<script> </script>
 	</body>
 </html>
