purged classes are back

--- a/src/profil.html
+++ b/src/profil.html
@@ -9,7 +9,7 @@
 		<style>@page { size: A4 }</style>
 	</head>
 	<body class="text-xs font-medium A4">
-        <div class="relative text-gray-700 border border-red-500 sheet">
+        <div class="relative text-gray-700 sheet">
             <table class="w-full">
                 <thead>
                     <tr>
