pre/after workout, notes block

--- a/src/index.html
+++ b/src/index.html
@@ -234,8 +234,49 @@
                                             </ul>
                                         </div>
                                     </module>
+                                    <module
+                                            href="/components/panel.html"
+                                            locals='{
+                                                "header": "Po cvičení",
+                                                "headerColor": "",
+                                                "kcal": "362 kcal",
+                                                "color": "purple",
+                                                "panelStyle": "",
+                                                "icon": "fa/s/dumbbell",
+                                                "iconColor": "805ad5"
+                                            }'
+                                    >
+                                        <div class="richtext">
+                                            <ul>
+                                                <li>Maso kuřecí prsa, bez kůže 200 g</li>
+                                                <li>Paprika zeleninová, zelená 70 g</li>
+                                                <li>Rajčata cherry 70 g</li>
+                                                <li>Brambory zimní, loupané, vařené v nesolené vodě 220 g</li>
+                                                <li>Olej řepkový, nízkoerukový 10 g Cibule 60 g</li>
+                                            </ul>
+                                        </div>
+                                    </module>
                                     <div class="flex justify-end w-full">
                                         Celková energie: <strong class="text-bold text-violet-500">1592 kcal</strong>
+                                    </div>
+                                    <div class="relative flex w-full mt-4 page-break-inside-avoid">
+                                        <module
+                                                href="/components/panel.html"
+                                                locals='{
+                                                        "header": "Poznámky:",
+                                                        "headerColor": "gray",
+                                                        "kcal": "",
+                                                        "color": "gray",
+                                                        "panelStyle": "hollow",
+                                                        "icon": "",
+                                                        "iconColor": ""
+                                                    }'
+                                        >
+                                            <div>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet consectetur aliquam. Etiam sed metus at metus elementum aliquet.
+                                                Phasellus auctor urna in ultricies vehicula.
+                                            </div>
+                                        </module>
                                     </div>
                                 </div>
                                 <div class="w-5/12 pl-1 pr-6">
